# pycounts_tm

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  einstein.txt  example.ipynb  make.bat
src/pycounts_tm/: __init__.py  plot_words.py  pycounts_tm.py
tests/: __init__.py  test_pycounts_tm.py
