[tool.poetry]
name = "pycounts_tm"
version = "0.1.0"
description = "A package to count the number of words in a text."
authors = ["Theilon Macedo"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
